--- a/01-intro/apo-lecture01-intro-en.tex
+++ b/01-intro/apo-lecture01-intro-en.tex
@@ -28,7 +28,7 @@ What you can do to speed up your program:
   \item Increase CPU performance/throughput
     \begin{itemize}
     \item CPU frequency
-    \item CPU efficiency - how many operations can it perform in 1 one clock cycle
+    \item CPU efficiency - how many operations it can perform in 1 one clock cycle
     \end{itemize}
   \end{itemize}
 \item Change program:
@@ -56,7 +56,7 @@ Does parallelization have some limitations:
   \item acceleration ratio for $p$ processors $S(p) = \frac{\alpha + 1 - \alpha}{\alpha + \frac{1-\alpha}{p}} = \frac{p}{1+\alpha \cdot (p-1)}$
   \item The acceleration limit for infinite processors is $S(p\to\infty) = lim_{p\to\infty}\frac{p}{1+\alpha \cdot (p-1)} = \frac{1}{\alpha}$
     \begin{itemize}
-    \item For example, for $\alpha=0.3$ limit is $S(p\to\infty) = 3.\overline{3}$, i.e. the program cannot be accelerated more than $3.\overline{3}$ times.
+    \item For example, for $\alpha=0.3$ limit is $S(p\to\infty) = 3.\overline{3}$, i.e.\ the program cannot be accelerated more than $3.\overline{3}$ times.
     \end{itemize}
   \end{itemize}
 \item In practice, the more processes you have, the more difficult it is to prepare data for parallelization.
@@ -70,12 +70,12 @@ Why to study computer architectures:
 \begin{itemize}
 \item Learn how the computer works when executes your program and where are the opportunities to make the program more efficient
   \begin{itemize}
-  \item find out what limits the a computer the computation speed (processor speed, memory size, main memory latency, number of processor cores) and test/choose another HW
+  \item find out what limits computer computation speed (processor speed, memory size, main memory latency, number of processor cores) and test/choose another HW
   \item find out if the program can be modified to use better available resources
   \begin{itemize}
     \item modify memory access pattern/order/data structures to optimize memory throughput and cache
-    \item modify the program to use less branch and jump instructions (less stalls and flushes of speculative work)
-    \item parallelize the computation, use specialized HW - GPU, accelerator units e.g. Coral USB or Intel Neural Compute Stick~2.
+    \item modify the program to use less branch and jump instructions (fewer stalls and flushes of speculative work)
+    \item parallelize the computation, use specialized HW - GPU, accelerator units e.g.\ Coral USB or Intel Neural Compute Stick~2.
   \end{itemize}
 \end{itemize}
 \item Demand for graduates combining artificial intelligence and embedded systems knowledge
@@ -96,7 +96,7 @@ All the basic components of your computer will be presented:
 
 Motivation to attend lectures:
 \begin{itemize}
-\item You'll learn topics and it will be easier to prepare for the exam
+\item You'll learn topics, and it will be easier to prepare for the exam
 \item If you answer the quiz question correctly at the end of the lecture, you will get an activity point
   \begin{itemize}
   \item Not every lecture, first scored quiz next week
@@ -155,7 +155,7 @@ Exam:
 If you are interested in this subject, the following subjects are related to it:
 \begin{itemize}
 \item BE4M35PAP -- Advanced Computer Architectures
-\item B3B38VSY  -- Embedded Systems
+\item B3B38VSY -- Embedded Systems
 \item BE4M38AVS -- Application of Embedded Systems
 \item B4B35OSY -- Operating Systems
 \item BE5B35LSP -- Logic Systems and Processors
@@ -168,7 +168,8 @@ If you are interested in this subject, the following subjects are related to it:
 \begin{itemize}
 \item PATTERSON, David A. a John L. HENNESSY. Computer organization and design RISC-V edition:
     the hardware/software interface. Second Edition. Cambridge: Elsevier, [2021].
-    ISBN 978-0-12-820331-6. (12 kusů v ústřední knihovně ČVUT)
+    ISBN 978-0-12-820331-6.
+(12 pcs in the central CTU library)
 \item web:
 \begin{itemize}
 \item \url{https://cw.fel.cvut.cz/wiki/courses/b35apo/}
@@ -193,7 +194,7 @@ If you are interested in this subject, the following subjects are related to it:
 \begin{frame}
 \frametitle{What is Inside Computer}
 
-Mainboard (of the Computer):
+Motherboard (of the Computer):
 \begin{center}
    \includegraphics[width=0.8\textwidth]{fig/motherboard.jpg}
 \end{center}
@@ -234,7 +235,7 @@ The general computer concept presented by Johnem von Neumannem (1903-1957), Hung
 \begin{columns}
 \begin{column}{0.50\textwidth}
 \begin{itemize}
-\item general purpose (user/integer) registers (GPRs) -- usually 8, 16, 32 or 64-bits wide according to CPU architecture
+\item General purpose (user/integer) registers (GPRs) -- usually 8, 16, 32 or 64-bits wide according to CPU architecture
 \item CPU fetches instructions from the memory (basically in order) and executes each fetched and decoded instruction
 \end{itemize}
 \end{column}
@@ -258,7 +259,7 @@ The general computer concept presented by Johnem von Neumannem (1903-1957), Hung
 
 Memory holds data values - bytes, words.
 
-If you already know some programming language then you can consider memory as array of same sized elements, i.e. for C-language:\\
+If you already know some programming language, then you can consider memory as array of same sized elements, i.e.\ for C-language:\\
 \texttt{unsigned char RAM[16 * 1024 * 1024 *1024]; // 16GiB RAM}
 
 \bigskip
@@ -268,7 +269,7 @@ and write to specified address (source/target is usually one of GPRs):\\
 \texttt{RAM[address] = R10;}
 \bigskip
 
-Address is numeric index into array which is usually encoded/transferred in binary repreznetation on the signals connecting CPU to the memory
+Address is numeric index into array which is usually encoded/transferred in binary representation on the signals connecting CPU to the memory
 
 \end{frame}
 
@@ -297,7 +298,7 @@ Address is numeric index into array which is usually encoded/transferred in bina
 Instruction Set Architecture (ISA)
 \begin{itemize}
 \item  is a complete instruction set specification for given chip/architecture, defines address modes, data widths, operations, encoding
-\item i.e. x86 (IA-32), x86-64 (AMD64, EM64T, IA-32e), ARM32, AArch64 (ARM64), AVR, MIPS, RISC-V
+\item i.e.\ x86 (IA-32), x86-64 (AMD64, EM64T, IA-32e), ARM32, AArch64 (ARM64), AVR, MIPS, RISC-V
 \item given ISA specifies:
 \begin{itemize}
 \item the list of known processor machine instruction set
@@ -322,9 +323,9 @@ Instruction Set Architecture (ISA)
 Reduced Instruction Set Computer
 \begin{itemize}
 \item Usually a smaller number of instructions
-\item All instructions have the same same width and encoding rules (sometimes half length aliases for more dense encoding)
-\item Less number and simpler addressing modes
-\item Mathematical operations ALU only within registers (i.e. load-store architecture)
+\item All instructions have the same width and encoding rules (sometimes half-length aliases for denser encoding)
+\item Fewer instructions and simpler addressing modes
+\item Mathematical operations ALU only within registers (i.e.,\ load-store architecture)
 \end{itemize}
 \end{column}
 \begin{column}{0.5\textwidth}  
@@ -334,7 +335,7 @@ Reduced Instruction Set Computer
 Complex Instruction Set Computer
 \begin{itemize}
 \item Usually a larger number of instructions
-\item The length of instructions even from 1 byte to e.g. 14 bytes, the most common instructions are the shortest
+\item The length of instructions even from 1 byte to e.g.\ 14 bytes, the most common instructions are the shortest
 \item Usually many complex addressing modes
 \item Data processing operations (ALU) even with values read/written to memory
 \end{itemize}
@@ -354,7 +355,7 @@ How come you have not heard about machine instructions yet?
 \end{center}
 
 \begin{itemize}
-\item Programming in assembler (assembly language) is often inefficient, hard, takes long time and application is fixed to one ISA.
+\item Programming in assembler (assembly language) is often inefficient, hard, takes a long time and application is fixed to one ISA.
 \item Compiler translates higher programming language directly into machine instructions of the target processor
 \item Cross-compilation -- program translation for a different processor ISA than is used on machine to compile program
 \end{itemize}
@@ -380,7 +381,7 @@ Why do we need transistors in a processor (CPU)?
 \begin{itemize}
 \item To implement the Boolean algebra and registers (combinational and sequential logic).
 \end{itemize}
-We often can focus on block building system at given level of hierarchy, i.e. ISA, register transfer level RTL, logic functions, gates, transistors, semiconductor/silicon structures, atomic-gratings
+We often can focus on block building system at given level of hierarchy, i.e.,\ ISA, register transfer level RTL, logic functions, gates, transistors, semiconductor/silicon structures, atomic-gratings
 \end{frame}
 
 
@@ -408,7 +409,7 @@ Boolean algebra is mathematical structure (see group theory):
 \item 0*0=0 \phantom{XXXX}  0*1=0
 \item 1*0=0 \phantom{XXXX}  1*1=1
 \end{itemize}
-\item Inversion, complementary element (negace, !, not, $\neg$)
+\item Inversion, complementary element (negation, !, not, $\neg$)
 \begin{itemize}
 \item -0 = 1
 \item -1 = 0
@@ -553,12 +554,12 @@ Quiz: What is the circuit function:
 \begin{frame}
 \frametitle{Binary Encoding/Representation/Numeral System -- Quiz 4}
 
-Quiz: One wire represents one value, either 0 or 1. How to represent more values/symbols, like all integers from 0 to 255 (i.e. one byte)?
+Quiz: One wire represents one value, either 0 or 1. How to represent more values/symbols, like all integers from 0 to 255 (i.e.,\ one byte)?
 \begin{itemize}
 \item[A] One wire has 8 different voltage levels
 \item[B] One wire represents 8 different 0/1 values consecutively over time
 \item[C] Eight wires, each representing one of the 0/1 values at one time
-\item[D] 256 wires, only one has a value of 1 others
+\item[D] 256 wires, only one has a value of 1
 \end{itemize}
 
 \end{frame}
@@ -586,7 +587,7 @@ Especially in the case of binary encoding
 
 \end{frame}
 
-\section{Asthmatics Adders}
+\section{Arithmetic Adders}
 
 \begin{frame}
 \frametitle{Addition -- Two Single Bit Values}
@@ -626,7 +627,7 @@ This logic circuit is called a Half Adder.
 \begin{frame}
 \frametitle{Addition -- Full Adder}
 
-If we add multi-bit numbers we need to add three bit inputs later.
+If we add multi-bit numbers, we need to add three bit inputs later.
 
 \begin{columns}
 \begin{column}{0.6\textwidth}
@@ -687,7 +688,7 @@ This logic circuit is called a full adder.
 \begin{frame}
 \frametitle{Addition -- Ripple Carry Adder}
 
-The simplest multi-bit asthmatics adder is build by connection of one half adder and multiple full adders.
+The simplest multi-bit asthmatics adder is built by connection of one half adder and multiple full adders.
 
 This type of adder is called Ripple Carry Adder (chained full-adders).
 
@@ -704,7 +705,7 @@ $a_5a_4a_3a_2a_1a_0 + b_5b_4b_3b_2b_1b_0 = s_6s_5s_4s_3s_2s_1s_0$ where $s_6 = c
 
 What is the speed of Ripple Carry Adder?
 \begin{itemize}
-\item If the signal propagation delay of one gate is N then the delay of Ripple Carry Adder for two 64-bit values is 63*2*N+N
+\item If the signal propagation delay of one gate is N, then the delay of Ripple Carry Adder for two 64-bit values is 63*2*N+N
 \item Is this important?
 \begin{itemize}
 \item Yes, consider CPU clock 4GHz, one clock cycle takes 250\,ps (picosecond)
@@ -725,7 +726,7 @@ What is the speed of Ripple Carry Adder?
 \begin{itemize}
 \item Is it possible to determine $C_1$, $C_2$, ... , directly form the addends?
 \begin{itemize}
-\item Yes, but for longer inputsit it is expensive, requires large gates count.
+\item Yes, but for longer inputs it is expensive, requires large gates count.
 \item The following example consider 4-bit inputs
 \item We can define two basic functions:
 \begin{itemize}
@@ -738,7 +739,7 @@ What is the speed of Ripple Carry Adder?
 \item $C_2=G_1 \lor (C_1 \land P_1)= G_1 \lor (G_0 \land P_1)$
 \item $C_3=G_2 \lor (C_2 \land P_2)= G_2 \lor (G_1 \land P_2) \lor (G_0 \land P_1 \land P_2)$ 
 \item $C_4=G_3 \lor (C_3 \land P_3)= G_3 \lor (G_2 \land P_3) \lor (G_1 \land P_2 \land P_3) \lor (G_0 \land P_1 \land P_2 \land P_3)$
-\item it is easy to extend expression for higher order bit, but it span longer and longer
+\item it is easy to extend expression for higher order bit, but it spans longer and longer
 \end{itemize}
 \end{itemize}
 \end{itemize}
@@ -783,7 +784,7 @@ How to resolve reasonably fast function for larger numbers, i.e., 64-bit?
 
 
 \begin{itemize}
-\item The latency/delay of 16-bit adder (at figure) is 16 gate delays
+\item The latency/delay of 16-bit adder (in the figure) is 16 gate delays
 \item The latency/delay of 64-bit adder is 64 gate delays, much better than 127 gate delays for simple Ripple Carry Adder.
 \end{itemize}
 
@@ -794,8 +795,8 @@ How to resolve reasonably fast function for larger numbers, i.e., 64-bit?
 \frametitle{Addition -- Carry Select Adder}
 
 \begin{itemize}
-\item It is sure that Carry is 0 or 1
-\item 4-bit CLA can be doubled and result is computed for both Carry inputs 0 and 1 in parallel
+\item It is certain that Carry is 0 or 1
+\item 4-bit CLA can be doubled and the result is computed for both Carry inputs 0 and 1 in parallel
 \item Only the multiplexer control is chained which chooses result accordingly if to Carry is 0 or 1
 \end{itemize}
 \begin{center}
@@ -1045,7 +1046,7 @@ Similar approach (divide and conquer - create a tree structure) can be used in t
 \begin{itemize}
 \item it is denoted in C-language by \texttt{>>} and \texttt{<<} operators
 \begin{itemize}
-\item The operations can be used for multiple by power of two 2 -- operation \texttt{<<}; and for division by power of 2 -- operation \texttt{>>}
+\item The operations can be used for multiplication by power of two 2 -- operation \texttt{<<}; and for division by power of 2 -- operation \texttt{>>}
 \end{itemize}
 \item How to implement shift by k-bits?
 \end{itemize}
@@ -1094,15 +1095,15 @@ double FastExp(double a, int k) {
 \begin{frame}
 \frametitle{Barrel Shifter}
 
-Shift by 0-7 bits can be composed from shift by 1, 2, 4:
+Shift by 0-7 bits can be composed of shift by 1, 2, 4:
 \begin{center}
    \includegraphics[width=0.75\textwidth]{barrel-shift.pdf}
 \end{center}
 
 \begin{itemize}
-\item Multiplexor in each row select ientity operation (do nothing) or shift by fixed number of bits
-\item Single bit input signals $x_2,x_1,x_0$ are quivalent to binary repreznetation of number of bits to shift
-\item Příklad:
+\item Multiplexor in each row selects identity operation (do nothing) or shifts by fixed number of bits
+\item Single bit input signals $x_2,x_1,x_0$ are equivalent to binary representation of number of bits to shift
+\item Example:
 \begin{itemize}
 \item shift by 5 bits is realized by serial combination of shift by 1 bit and shift by 4 bits ($x_2=1$, $x_1=0$, $x_0=1$)
 \item shift by 3 bits is realized by serial combination of shift by 1 bit and shift by 2 bits ($x_2=0$, $x_1=1$, $x_0=1$)
@@ -1115,7 +1116,7 @@ Shift by 0-7 bits can be composed from shift by 1, 2, 4:
 \begin{frame}
 \frametitle{Quiz}
 
-How many layers (row) Barrel shifter must have for 64 bit number, i.e. for rotations from 0 to 63? (For rotations from 0 to 7 it was 3 layers)
+How many layers (row) a barrel shifter must have for 64-bit number, i.e.,\ for rotations from 0 to 63? (For rotations from 0 to 7, it was 3 layers)
 
 \begin{itemize}
 \item[A] 4
